--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     margin:0;
     font-family:'Times New Roman', Times, serif;
 }
+
 nav{
     background-color: rgb(35, 34, 34);
     color: #ffff;
@@ -12,29 +13,60 @@ nav{
     display: flex;
     justify-content: space-between;
 }
+
 .logo{
     cursor: pointer;
     font-size: 25px;
     font-weight: 600;
 }
+
 .navbar{
     display: flex;
     align-items: center;
 }
+
 .navbar-menu{
     list-style: none;
     margin: 0px 7px;
     cursor: pointer;
 }
+
 .container{
     max-width: 80vw;
     margin: 24px auto;
 }
 
 table, th, tr, td{
-    border: 1px solid black;
+    border: 2px solid black;
     margin: 25px 0px;
     border-collapse: collapse;
-    padding: 10px 5px;
+    padding: 10px 8px;
     text-align: left;
+}
+
+.delete-btn{
+    padding: 4px 13px;
+    background-color: red;
+    color: white;
+    border-radius: 5px;
+    border: 2px solid pink;
+    cursor: pointer;
+}
+
+.save-btn{
+    background-color: blue;
+    border: 2px solid skyblue;
+    color: white;
+    cursor: pointer;
+    border-radius: 5px;
+    padding: 4px 20px;
+    margin: 10px 0px;
+}
+
+.form-input{
+    padding: 5px 11px;
+}
+
+.form-label{
+    margin: 10px;
 }
